# PhD-Projects

./: Ideas-Storm.md  LICENSE  README.md  pyproject.toml
Sources/: Ideas-Storm.md  Source-Links.md
phdprojs/: pyvenv.cfg
phdprojs/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
