[project]
name = "phdprojects"
version = "0.0.1"
description = "A package intended to serve as a database and useful means of information for PhD related information, in regard to projects and otherwise."
authors = [
    {name = "Orion Grieco",email = "46628700+Orion-Grieco@users.noreply.github.com"}
]
license = {text = "Restricted Reuse License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip (>=25.2,<26.0)",
    "reflex (>=0.8.11,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
